--- a/Privilegia/Views/Incidencias/Index.cshtml
+++ b/Privilegia/Views/Incidencias/Index.cshtml
@@ -37,9 +37,9 @@
                     <tr>
                         <th>Id</th>
                         <th>Cif Empresa</th>
-                        <th>Fecha de Cracion</th>
+                        <th>Fecha de Creación</th>
                         <th>Linea</th>
-                        <th>Descripcion</th>
+                        <th>Descripción</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
