--- a/Privilegia/Views/Shared/_NavBar.cshtml
+++ b/Privilegia/Views/Shared/_NavBar.cshtml
@@ -61,8 +61,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Facturacion <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/FacturacionPublicidad">F. Publicidad</a></li>
-                            <li><a>F. Productos</a></li>
+                            <li><a href="/FacturacionPublicidad">Creación F. Publicidad</a></li>
+                            <li><a href="/SubidaArchivos/VerDatosArchivo">Creación F. Premios</a></li>
                         </ul>
                     </li>
 
@@ -71,11 +71,11 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Informes <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/Informes/Publicidad">F. Publicidad</a></li>
-                            <li><a href="/Informes/FacturasPremiosPartner">F. Premios</a></li>
-                            <li><a href="/Informes/InformePremiosPorPartner">Premios por Partner</a></li>
-                            <li><a href="/Informes/InformePremiosProductosPartner">Premios por Partner y Producto</a></li>
-                            <li><a>Premios por Mutualista</a></li>
+                            <li><a href="/Informes/Publicidad">Ver Facturas Publicidad</a></li>
+                            <li><a href="/Informes/FacturasPremiosPartner">Ver Facturas Premios</a></li>
+                            <li><a href="/Informes/InformePremiosPorPartner">I.Premios por Partner</a></li>
+                            <li><a href="/Informes/InformePremiosProductosPartner">I.Premios por Partner y Producto</a></li>
+                            <li><a href="/Informes/InformePremiosMutualista">Premios por Mutualistas</a></li>
                             <li><a>Operaciones</a></li>
                             <li><a>Comparativas</a></li>
                             <li><a>Comisiones</a></li>
