--- a/Privilegia/Views/Informes/FacturasPremiosPartner.cshtml
+++ b/Privilegia/Views/Informes/FacturasPremiosPartner.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="row">
     <div class="col-md-12">
-        <h2 align="center"><span class="glyphicon glyphicon-list"></span> Facturación Publicidad</h2>
+        <h2 align="center"><span class="glyphicon glyphicon-list"></span> Facturas Premios</h2>
         <hr />
     </div>
 </div>
@@ -32,13 +32,14 @@
     <div class="row">
         <div class="col-md-12">
             <div class="table-responsive">
-                <table id="Premios" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                <table id="Premios" class="table table-striped" cellspacing="0" width="100%">
                     <thead>
                         <tr>
                             <th>Id</th>
                             <th>Nombre Empresa</th>
                             <th>Fecha Creacion</th>
                             <th>Estado</th>
+                            <th>Total €</th>
                             <th></th>
                         </tr>
                     </thead>
@@ -64,13 +65,23 @@
                         { "sName": "FechaDeCreacion" },
                         { "sName": "Estado" },
                         {
+                            "sName": "Total",
+                            "render": function (data) {
+                                return data + " €";
+                            }
+                        },
+                        {
                             "bSearchable": false,
                             "render": function(data, type, row) {
                                 //return '<a href=\"LinkedAccountsDetails/' + data + '\">Edit</a>';
-                                var UrlFactura = '@Url.Action("VerFacturaPremios", "Informes")/' + row[5];
+                                var UrlFactura = '@Url.Action("VerFacturaPremios", "Informes")/' + row[0];
+                                var UrlEditar = '@Url.Action("EditarFacturaPremios", "Informes")/' + row[0];
                                 return '<a href=\"' +
                                     UrlFactura +
-                                    '\" class=\"btn btn-success btn-sm\" target=\"_blank\"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a> ';
+                                    '\" class=\"btn btn-success btn-sm\" target=\"_blank\"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a> ' +
+                                     '<a href=\"' +
+                                    UrlEditar +
+                                    '\" class=\"btn btn-info btn-sm\" ><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> ';
                             }
                         }
                     ],
@@ -98,15 +109,17 @@
                             "sSortDescending": ": Activar para ordenar la columna de manera descendente"
                         }
                     }
-                });
+                }).yadcf([{
+                    column_number: 3
+                }]);
 
         });
 
-        function filterme() {
+        function filterme(filtro) {
 
             var partner = $('#selectpickerPartner').val();
 
-            if (typeof partner !== "undefined") {
+            if (filtro && typeof partner !== "undefined") {
                 //Tenemos partner
                 $.ajax({
                     type: "GET",
@@ -128,6 +141,24 @@
                 });
             } else {
                 //No tenemos partner
+                $.ajax({
+                    type: "GET",
+                    url: "/Informes/CargarFacturasPremios",
+                    data: { idPartner: null },
+                    success: function (data) {
+                        if (data.iTotalDisplayRecords > 0) {
+                            //botoncrearfactura
+                            otable.fnClearTable();
+                            otable.fnAddData(data.aaData);
+                            otable.fnDraw();
+                        } else {
+                            otable.fnClearTable();
+                            otable.fnDraw();
+                        }
+
+
+                    }
+                });
 
             }
 
@@ -135,10 +166,10 @@
 
         $(document)
             .ready(function() {
-
+                filterme(false);
                 $('#selectpickerPartner')
                     .change(function() {
-                        filterme();
+                        filterme(true);
                     });
             });
 
