--- a/Privilegia/Views/Informes/Publicidad.cshtml
+++ b/Privilegia/Views/Informes/Publicidad.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="row">
     <div class="col-md-12">
-        <h2 align="center"><span class="glyphicon glyphicon-list"></span> Facturación Publicidad</h2>
+        <h2 align="center"><span class="glyphicon glyphicon-list"></span> Facturas Publicidad</h2>
         <hr />
     </div>
 </div>
@@ -40,6 +40,7 @@
                             <th>Fecha Creacion</th>
                             <th>Plan de Medios</th>
                             <th>Total €</th>
+                            <th>Estado</th>
                             <th>Factura</th>
                         </tr>
                     </thead>
@@ -78,16 +79,20 @@
                             "render": function (data) {
                                 return data + " €";
                             }
-                        },
+                        }, { "sName": "Estado" },
                         {
                             "sName": "idFactura",
                             "bSearchable": false,
                             "render": function(data, type, row) {
                                 //return '<a href=\"LinkedAccountsDetails/' + data + '\">Edit</a>';
-                                var UrlFactura = '@Url.Action("VerFacturaPublicidad", "Informes")/' + row[5];
+                                var UrlFactura = '@Url.Action("VerFacturaPublicidad", "Informes")/' + row[6];
+                                var UrlEditar = '@Url.Action("EditarFacturaPublicidad", "Informes")/' + row[6];
                                 return '<a href=\"' +
                                     UrlFactura +
-                                    '\" class=\"btn btn-success btn-sm\" target=\"_blank\"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a> ';
+                                    '\" class=\"btn btn-success btn-sm\" target=\"_blank\"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a> ' + 
+                                    '<a href=\"' +
+                                    UrlEditar +
+                                    '\" class=\"btn btn-info btn-sm\" ><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> ';
                             }
                         }
                     ],
@@ -115,15 +120,20 @@
                             "sSortDescending": ": Activar para ordenar la columna de manera descendente"
                         }
                     }
-                });
+                }).yadcf([{
+                    column_number: 3
+                },{
+                    column_number: 5
+                }]);
+
 
         });
 
-        function filterme() {
+        function filterme(filtro) {
 
             var partner = $('#selectpickerPartner').val();
 
-            if (typeof partner !== "undefined") {
+            if (filtro && typeof partner !== "undefined") {
                 //Tenemos partner
                 $.ajax({
                     type: "GET",
@@ -145,6 +155,24 @@
                 });
             } else {
                 //No tenemos partner
+                $.ajax({
+                    type: "GET",
+                    url: "/Informes/CargarFacturasPublicidad",
+                    data: { idPartner: null },
+                    success: function (data) {
+                        if (data.iTotalDisplayRecords > 0) {
+                            //botoncrearfactura
+                            otable.fnClearTable();
+                            otable.fnAddData(data.aaData);
+                            otable.fnDraw();
+                        } else {
+                            otable.fnClearTable();
+                            otable.fnDraw();
+                        }
+
+
+                    }
+                });
 
             }
 
@@ -153,9 +181,11 @@
         $(document)
             .ready(function() {
 
+                filterme(false);
+
                 $('#selectpickerPartner')
                     .change(function() {
-                        filterme();
+                        filterme(true);
                     });
             });
 
