--- a/Privilegia/Views/Productos/EliminarProducto.cshtml
+++ b/Privilegia/Views/Productos/EliminarProducto.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Privilegia.Models.Productos.ProductoModel
 
-<div>
+<div class="ficha">
     <h2>Borrar Producto</h2>
 
     <h4>Estas seguro de borrar este producto con todos sus elementos?</h4>
@@ -92,9 +92,9 @@
         </dd>
 
     </dl>
-</div>
-<p>
-    <button class="btn btn-danger">Borrar</button>
-    <a class="btn btn-warning" href='@Url.Action("Index","Productos")'>Volver al listado <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span></a>
-</p>
 
+    <p>
+        <a class="btn btn-danger" href='@Url.Action("EliminarProductoConfirmed","Productos", new {id = Model.Id})'>Eliminar</a>
+        <a class="btn btn-warning" href='@Url.Action("Index","Productos")'>Volver al listado <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span></a>
+    </p>
+</div>
